kubernetes/main/apps/external-services/services/app/haos.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`haos.dcunha.io`)
      middlewares:
        - name: default-headers
          namespace: kube-system
      services:
        - name: haos-svc
          port: 8123
  tls:
    secretName: dcunha-io-tls
---
apiVersion: v1
kind: Service
metadata:
  name: haos-svc
  namespace: external-services
spec:
  type: ExternalName
  externalName: 10.10.152.110
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
