kubernetes/main/apps/external-services/services/app/pihole.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ing-route
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.dcunha.io`)
      kind: Rule
      services:
        - name: pihole-svc
          port: 80
      middlewares:
        - name: default-headers
          namespace: kube-system
  tls:
    secretName: dcunha-io-tls
    # domains:
    # - main: pihole.dcunha.io
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc
  namespace: external-services
spec:
  type: ExternalName
  externalName: 10.10.99.5
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
