kubernetes/main/apps/external-services/services/app/technitium.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app technitium
  namespace: &ns external-services
spec:
  ports:
    - name: http
      port: &port1 5380
      protocol: TCP
      targetPort: *port1
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app technitium
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.10.99.3
    ports:
      - port: &port1 5380
        name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app technitium
  namespace: external-services
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    # external-dns.alpha.kubernetes.io/hostname: "dns.dcunha.lab" # Creates the DNS record
    external-dns.alpha.kubernetes.io/target: "10.10.99.3" # Points it to this IP
    gatus.home-operations.com/endpoint: |-
      url: "http://dns.dcunha.lab"
      interval: 1m
      conditions:
        - "[STATUS] == 200"
spec:
  hostnames:
    - dns.dcunha.lab
  parentRefs:
    - name: internal-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          namespace: external-services
          port: &port1 5380
