kubernetes/main/apps/external-services/services/app/truenas.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas-ing-route
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.dcunha.io`)
      kind: Rule
      services:
        - name: truenas-svc
          port: 1443
      middlewares:
        - name: default-headers
          namespace: kube-system
  tls:
    secretName: dcunha-io-tls
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-svc
  namespace: external-services
spec:
  type: ExternalName
  externalName: 10.10.99.100
  ports:
    - port: 1443
      targetPort: 1443
      protocol: TCP
      name: https
