kubernetes/main/apps/external-services/services/app/unifi.yaml
---
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.34.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: external-services
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app unifi
  namespace: external-services
  labels:
    kubernetes.io/service-name: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.99.8
    conditions:
      ready: true
ports:
  - name: http
    protocol: TCP
    port: 80
  - name: https
    protocol: TCP
    port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app unifi
  namespace: external-services
spec:
  hostnames:
    - unifi.local.dcunha.io
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: unifi
          namespace: external-services
          port: 443
